# ghidra_advisor

./: .gitignore  .gitmodules  Advisor.ipynb  MODULE.bazel  Readme.md  advisor.py  analytics.py  cpputils.py  elfutils.py  generator.py  hugo.toml  ingest.py  instr_parse.py  integration_test.py  objdump.py  opcode_handler.py  opcodes.py  package-lock.json  sample.py  sample_analytics.py  target.py  toolchain.py  variables.bzl  whisper-cpp.BUILD
.github/workflows/: static.yml
content/en/: _index.md
content/en/docs/: _index.md
custom_testsuite/builtins/: BUILD  memcpy.c  string.c
custom_testsuite/dpdk/: BUILD  net_iavf.c
custom_testsuite/structs/: BUILD  initialize_structs.c  reduction.c  test_1_ref.c
data_test/: librvv_reduc-1_rv64gc.objdump  librvv_reduc-1_rv64gcv.objdump  reduc-1_rv64gc.i  scalable-1_rv64gcv.i  scatter_store_64-1_rv64gcv.i  strcmp_rv64gcv.i  string_rv64gcv.i
data_test/advisor_tests/: gather.ghidra  gather2.ghidra  loop1.ghidra
data_test/signature_tests/: ghidra_sample.s  objdump_sample.s
other_src/: BUILD  stdlibc++_exploration.cpp
public/: 404.html  index.html  index.xml  sitemap.xml
public/categories/: index.html  index.xml
public/docs/: index.html  index.xml
public/js/: main.min.8a05dcc39d91f21cdf8bc6e9b3a58055477119d3c6b18aff8bfec7cfd4640e99.js  main.min.8a3d965bc9a92ad6123f0652ee76ba34b339af74ad47af20e7c54a84385cd39a.js
public/scss/: main.css.map  main.min.566d7ac1e84fdb8192a82cf733a3d350d86778608b7404836e1cd5c1232ef742.css
public/tags/: index.html  index.xml
test/: BUILD
toolchains/: BUILD
(+62 files in other folders)
